--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <form action="#">
                 <label for="originVal">Enter your url in below box:</label></br>
                 <input type="text" id="originId" name="originVal" value="originUrl"/></br>
-                <input type="submit" value="submit" id="submit">
+                <button type="submit" value="submit" id="submitBtn">Submit</button>
             </form>
         </div>
     </div>
